--- a/orchestration/package.json
+++ b/orchestration/package.json
@@ -19,5 +19,15 @@
   "bugs": {
     "url": "https://github.com/mjbaig/OpenBook/issues"
   },
-  "homepage": "https://github.com/mjbaig/OpenBook#readme"
+  "homepage": "https://github.com/mjbaig/OpenBook#readme",
+  "dependencies": {
+    "knex": "^0.14.4",
+    "koa": "^2.5.0",
+    "koa-router": "^7.4.0",
+    "winston": "^2.4.1"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.4"
+  }
 }
