--- a/ui/package.json
+++ b/ui/package.json
@@ -1,103 +1,29 @@
 {
   "name": "ui",
   "version": "1.0.0",
-  "description": "Ready-to-go Preact starter project powered by webpack.",
+  "description": "The frontend for Open Book",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --progress",
-    "start": "serve build -s -c 1",
-    "prestart": "npm run build",
-    "build": "cross-env NODE_ENV=production webpack --progress",
-    "prebuild": "mkdirp build && ncp src/assets build/assets",
-    "test": "npm run -s lint && jest --coverage",
-    "test:watch": "npm run -s test -- --watch",
-    "lint": "eslint src test"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --config webpack.config.dev.js --open --port 4200",
+    "build-dev": "webpack --config webpack.config.dev.js",
+    "build-prod": "webpack --config webpack.config.prod.js"
   },
-  "keywords": [
-    "preact",
-    "boilerplate",
-    "webpack"
-  ],
-  "license": "MIT",
-  "author": "Jason Miller <jason@developit.ca>",
-  "jest": {
-    "setupFiles": [
-      "./test/setup.js"
-    ],
-    "testURL": "http://localhost:8080",
-    "moduleFileExtensions": [
-      "js",
-      "jsx"
-    ],
-    "moduleDirectories": [
-      "node_modules"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "identity-obj-proxy",
-      "^react$": "preact-compat",
-      "^react-dom$": "preact-compat"
-    },
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
-    ]
-  },
+  "author": "Maz Baig and Taimore Khan",
+  "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^8.0.0",
-    "babel": "^6.5.2",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^8.2.2",
-    "babel-jest": "^20.0.0",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-jsx": "^6.8.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.24.0",
-    "babel-runtime": "^6.11.6",
-    "chai": "^4.0.2",
-    "copy-webpack-plugin": "^4.0.1",
-    "core-js": "^2.4.1",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.28.0",
-    "eslint": "^4.1.0",
-    "eslint-plugin-jest": "^21.7.1",
-    "eslint-plugin-react": "^7.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.7",
-    "html-webpack-plugin": "^2.28.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^20.0.0",
-    "json-loader": "^0.5.4",
-    "less": "^3.0.0",
-    "less-loader": "^4.0.3",
-    "mkdirp": "^0.5.1",
-    "ncp": "^2.0.0",
-    "offline-plugin": "^4.7.0",
-    "postcss-loader": "^2.0.3",
-    "preact-jsx-chai": "^2.2.1",
-    "raw-loader": "^0.5.1",
-    "regenerator-runtime": "^0.10.3",
-    "replace-bundle-webpack-plugin": "^1.0.0",
-    "script-ext-html-webpack-plugin": "^1.3.4",
-    "sinon": "^4.2.1",
-    "sinon-chai": "^2.9.0",
-    "source-map-loader": "^0.2.1",
-    "style-loader": "^0.20.0",
-    "url-loader": "^0.6.1",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.4.4"
+    "chai": "^4.1.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "mocha": "^5.1.0",
+    "style-loader": "^0.20.3",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-closure-compiler": "^2.1.6",
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
-    "preact": "^8.1.0",
-    "preact-compat": "^3.15.0",
-    "preact-render-to-string": "^3.6.0",
-    "preact-router": "^2.5.1",
-    "promise-polyfill": "^7.0.1",
-    "proptypes": "^1.0.0",
-    "serve": "^6.0.0"
-  },
-  "main": "webpack.config.babel.js",
-  "directories": {
-    "test": "test"
+    "lodash": "^4.17.5"
   }
 }
