--- a/ui/.babelrc
+++ b/ui/.babelrc
@@ -1,5 +1,11 @@
 {
+    "sourceMaps": true,
     "presets": [
-        "es2015"
+        ["es2015", {"loose": true}],
+        "stage-0"
+    ],
+    "plugins": [
+        ["transform-decorators-legacy"],
+        ["transform-react-jsx", {"pragma": "h"}]
     ]
 }
