--- a/ui/package.json
+++ b/ui/package.json
@@ -12,15 +12,21 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.1.0",
+    "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
@@ -28,6 +34,10 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.5",
+    "preact": "^8.2.7",
+    "preact-compat": "^3.18.0",
+    "preact-render-to-string": "^3.7.0",
+    "preact-router": "^2.6.0"
   }
 }
